erDiagram

    geographies {
        int id PK
        varchar code
        varchar name
        boolean is_global
    }

    categories {
        int id PK
        varchar name
        int parent_id FK
        text full_path
    }

    processes {
        int id PK
        varchar name
        text description
        int category_id FK
        int geography_id FK
        smallint reference_year
        varchar source_dataset
        varchar external_id
        timestamptz created_at
    }

    units {
        int id PK
        varchar name
        varchar dimension
    }

    flows {
        int id PK
        varchar name
        text description
        flow_type_enum flow_type
        int unit_id FK
        varchar cas_number
        varchar external_id
        timestamptz created_at
    }

    exchanges {
        int id PK
        int process_id FK
        int flow_id FK
        direction_enum direction
        numeric amount
        int unit_id FK
        boolean is_reference_flow
        text comment
        timestamptz created_at
    }

    impact_categories {
        int id PK
        varchar name
        varchar code
        varchar method
        varchar unit
        text description
    }

    impact_results {
        int id PK
        int process_id FK
        int impact_category_id FK
        numeric value
        timestamptz created_at
    }

    %% Relationships

    categories ||--o{ categories : "parent-child"

    categories ||--o{ processes : "categorizes"
    geographies ||--o{ processes : "located_in"

    processes ||--o{ exchanges : "has"
    flows ||--o{ exchanges : "used_in"
    units ||--o{ exchanges : "measured_in"

    units ||--o{ flows : "default_unit"

    processes ||--o{ impact_results : "has"
    impact_categories ||--o{ impact_results : "defines"